# speechbrain-cl

./: .cookiecutter.json  .darglint  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  LICENSE  README.md  initialize.sh  noxfile.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: constraints.txt  release.yml  tests.yml
cl/: __init__.py  __main__.py  base_asr_model.py  batch.py  classes.py  cli_dispatcher.py  curriculum.py  filelist_tokenizer.py  train_utlis.py  utils.py  vad.py
cl/asr_models/: __init__.py  asr_aku.py  asr_base.py  asr_w2v2.py
cl/examples/: hyperparameters.yaml  train.py
cl/hparams_examples/: base_recipe.yaml
cl/info/: find_anomalies.py  get_train_times.py  globals.py  log_corr.py  plot_metric_per_length.py  read_wer_test.py  statmd.py  test_scores.py  testset_correlation.py  time_stats.py  visualize.py
cl/methods/: frequency_cl.py
cl/utils/: kaldi_format_calc_wer.py  process_significance_tests.py  process_utils.py  remove_repetitions.py
cl/vad/: train.py
cl/vad/hparams/: train.yaml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
recipes/CommonVoice/: README.md
recipes/CommonVoice/ASR/seq2seq/: prepare_cv8.py  train.py  train_cv8.py
recipes/CommonVoice/ASR/seq2seq/hparams/: crdnn_wer_noisy.yaml
src/cl/: __init__.py  __main__.py  base_asr_model.py  batch.py  classes.py  cli_dispatcher.py  curriculum.py  filelist_tokenizer.py  train_utils.py  train_utlis.py  vad.py
src/cl/asr_models/: __init__.py  asr_aku.py  asr_base.py  asr_w2v2.py
src/cl/examples/: hyperparameters.yaml  train.py  train_example.py
src/cl/hparams_examples/: base_recipe.yaml
src/cl/info/: __init__.py  find_anomalies.py  get_train_times.py  globals.py  log_corr.py  plot_metric_per_length.py  read_wer_test.py  statmd.py  test_scores.py  testset_correlation.py  time_stats.py  visualize.py
src/cl/methods/: frequency_cl.py
src/cl/utils/: convert_txt_to_trn.py  kaldi_format_calc_wer.py  process_significance_tests.py  process_utils.py  remove_repetitions.py  sb_wer_to_kaldi.py  significance_tests.py  significance_tests.sh
src/cl/vad/: __init__.py  data_augment.py  train.py
src/cl/vad/hparams/: train.yaml
tests/: __init__.py  test_main.py
