[tool.poetry]
name = "speechbrain-cl"
version = "1.0.1a"
description = "Implementation of multiple curriculum learning methods for speechbrain ASR (mirror from private repo)."
authors = ["Georgios K. <geoph9@protonmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/geoph9/speechbrain-cl"
repository = "https://github.com/geoph9/speechbrain-cl"
documentation = "https://speechbrain-cl.readthedocs.io"
keywords = [
    "curriculum-learning",
    "speechbrain",
    "speech-recognition"
]
packages = [
    { include = "cl", from = "src" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
]

[tool.poetry.urls]
Changelog = "https://github.com/geoph9/speechbrain-cl/releases"

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
# numpy = ">=1.17.0"
pre-commit = ">=2.3.0"
# speechbrain @ git+https://github.com/geoph9/speechbrain@devcurr#egg=speechbrain
# speechbrain = { git = "https://github.com/geoph9/speechbrain", branch = "devcurr"}
speechbrain-geoph9 = "0.5.12a0"
# speechbrain = "0.5.12"
transformers = "4.4.0"
pandas = "1.4.*"
# matplotlib = "3.5.0"
# seaborn = "0.11.2"

[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
sphinx-argparse = "^0.3.1"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}

[tool.poetry.scripts]
cl = "cl.cli_dispatcher:dispatch"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["cl", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools >= 46.4.0", "wheel >= 0.37.1"]
build-backend = "poetry.core.masonry.api"
