[metadata]
name = cl
version = 1.0a
description = Implementation of multiple curriculum learning methods for speechbrain ASR (mirror from private repo).
long_description = file:README.md
long_description_content_type = text/markdown
author = Georgios K. (geoph9)
author_email = geoph9@protonmail.com
license = MIT
license_files = LICENSE
url = https://github.com/aalto-speech/speechbrain_cl
platform = any

keywords =
    curriculum-learning
    speechbrain
    speech-recognition

classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Machine Learning :: ASR Research :: Speechbrain
    Typing :: Typed

project_urls =
    Source Code = https://github.com/aalto-speech/speechbrain_cl
    Bug Tracker = https://github.com/aalto-speech/speechbrain_cl/issues
    Changelog = https://github.com/aalto-speech/speechbrain_cl/blob/master/CHANGELOG.md

[options]
packages = find:
package_dir =
    =.
include_package_data = true
python_requires = >=3.8
setup_requires =
    wheel>=0.37.1
install_requires =
	wheel
	numpy>=1.17.0
	pre-commit>=2.3.0
	speechbrain @ git+https://github.com/geoph9/speechbrain@devcurr#egg=speechbrain
	transformers==4.4.0
	matplotlib==3.5.0
	seaborn==0.11.2
tests_require =
	pytest==6.2.4

[options.entry_points]
console_scripts =
    cl = cl:cli_dispatcher.dispatch

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar
